Fixed hero box vertical align in different sizes. Fixed sticky being broken on higher zoom levels.

--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-$large: 30px;
-$small: 20px;
+
 //font-size 
-$padding: 100px 0;
+$small: 16px;
+$large: 30px;
+
 // default padding = 100px
+$padding: 100px 0;
+
+// default line height
+$line-height: 1.5;
+
 .container {
     width: 70%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -39,34 +46,41 @@ $padding: 100px 0;
 
 body {
     font-family: 'Roboto', sans-serif;
+    line-height: $line-height;
+    font-size: $small;
 }
 
 header {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url("img/background-header.jpg") no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    height: 100vh;
     .header-nav-bar {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        padding: 20px 0; // background: rgba(63, 93, 145, 0.2);
+        padding: 15px; // background: rgba(63, 93, 145, 0.2);
         nav {
             display: flex;
             justify-content: space-between;
-            .logo-wrapper img {
-                width: 100%;
-            }
-            li {
-                padding-top: 20px;
+            align-items: center;
+            .logo-wrapper {
+                width: 20%;
+
+                img {
+                  width: 100%;
+                }
+              }
+              li {
+                // padding-top: 20px;
                 display: inline-block;
-                padding-left: 25px;
+                padding-left: 10px;
                 a {
                     text-decoration: none;
                     text-transform: uppercase;
                     letter-spacing: 1px;
                     color: #fff;
-                    font-size: 19px;
+                    font-size: 16px;
                     /*  #4C4D4D; */
                 }
                 a:hover {
@@ -76,14 +90,19 @@ header {
         }
     }
     .div-header-center {
-        padding-top: 18%;
         text-align: center;
         color: #fff;
+        position: relative;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
         h1 {
-            font-size: 9em;
-            padding-bottom: 15px;
+            font-size: 7em;
+            // padding-bottom: 15px;
             font-weight: 300;
             letter-spacing: 8px;
+            margin: 0;
         }
         h2 {
             font-weight: 300;
@@ -97,7 +116,7 @@ header {
             color: #fff;
             padding: 10px 30px;
             font-size: 1.3em;
-            margin-bottom: 100px;
+            // margin-bottom: 100px;
             cursor: pointer;
             margin-right: 10px;
             border-radius: 200px;
@@ -115,7 +134,7 @@ header {
             color: #fff;
             padding: 10px 40px;
             font-size: 1.3em;
-            margin-bottom: 100px;
+            // margin-bottom: 100px;
             cursor: pointer;
             border-radius: 200px;
         }
@@ -196,7 +215,7 @@ header {
             font-weight: 400;
         }
         .service-container img {
-            width: 130px;
+            width: 100px;
             height: auto;
             border-radius: 50%;
             text-align: center;
@@ -212,8 +231,8 @@ header {
     }
     .image-background {
         margin: auto;
-        height: 30vh;
-        padding: 60px 60px 60px 73px;
+        // height: 30vh;
+        padding: $padding;
         margin-top: 70px;
         background: url("img/Picture3.png") no-repeat;
         background-size: cover;
@@ -222,7 +241,7 @@ header {
         overflow: hidden;
     }
     .heading-description {
-        padding-top: 20px;
+        // padding-top: 20px;
         color: #fff;
         font-size: $large;
         text-align: center;
@@ -232,13 +251,14 @@ header {
     }
     .service-description {
         color: #fff;
-        width: 70%;
-        font-weight: 400;
-        line-height: 1.3;
         font-size: $small;
-        line-height: 30px;
-        margin: auto;
-        margin-bottom: 1.2%;
+        text-align: center;
+        // width: 70%;
+        // font-weight: 400;
+        // line-height: 1.3;
+        // line-height: 30px;
+        // margin: auto;
+        // margin-bottom: 1.2%;
     }
     .service-description p:last-child {
         margin-top: 1%;
@@ -247,17 +267,18 @@ header {
 
 #project {
     padding: $padding;
+    padding-bottom: 0;
     .project-text {
         h3 {
             text-align: center;
             font-size: 45px;
             font-weight: 300;
-            padding-bottom: 40px;
+            // padding-bottom: 40px;
         }
     }
     .lock-trip-logo-container {
         text-align: center;
-        width: 17%;
+        // width: 17%;
         margin: auto; //box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         padding: 25px;
     }
@@ -265,7 +286,7 @@ header {
         -webkit-filter: drop-shadow(5px 5px 3px rgba(0, 0, 0, 0.2));
     }
     p {
-        padding-bottom: 10px;
+        // padding-bottom: 10px;
         padding-left: 30px;
         line-height: 1.5;
         font-size: $small;
@@ -278,7 +299,7 @@ header {
     #project-container {
         display: flex;
         justify-content: space-around;
-        padding-top: 90px;
+        // padding-top: 90px;
         img {
             padding: 30px;
             transition: transform .7s;
@@ -660,4 +681,5 @@ footer {
 
 .sticky-header {
     background-color: rgba(63, 93, 145, 0.6);
+    z-index: 999;
 }
